# lidlab

./: .gitignore  README.md
als/Growth_Curves/: Five_reps.R  five reps_formate dependent growth.xlsx
als/HPLC_data_analysis/: Readme.md  bulkfileprocessing.py  read_dat.py
als/R_Shiny_Growth_Curve_App/: 2014_06_06.xlsx  (+9 more)
dacb/engines_for_biology/: ADDING_ENGINES  AUTHORS  CHANGES  Makefile  Makefile.in  README  ax_check_mysql.m4  ax_check_openssl.m4  ax_lib_expat.m4  config.status  configure  configure.ac  setup
dacb/engines_for_biology/blast_fmt6/: Makefile  ha_blast_fmt6.cc  ha_blast_fmt6.cc.in  ha_blast_fmt6.h  ha_core.cc  ha_core.h  test.blast_fmt6  test.sql  transparent_file.h.in
dacb/engines_for_biology/examples/: Makefile  convert_fastq_2_fasta.sql  install_plugins.sql  setup_db.sql  uninstall_plugins.sql
dacb/engines_for_biology/examples/plugin/: blast_fmt6_install.sql  blast_fmt6_uninstall.sql  fasta_install.sql  fasta_uninstall.sql  fastq_install.sql  fastq_uninstall.sql  install_all.sql  uninstall_all.sql
dacb/engines_for_biology/fasta/: Makefile  Makefile.in  ha_core.cc  ha_core.h  ha_fasta.cc  ha_fasta.h  test.fasta  test.sql  transparent_file.cc.in
dacb/engines_for_biology/fastq/: Makefile  ha_core.cc  ha_core.h  ha_fastq.cc  ha_fastq.h  ha_fastq.h.in  test.fastq  test.sql
dacb/engines_for_biology/protXML/: Makefile  Makefile.in  ha_protXML_indistinguishable_peptide.cc  ha_protXML_indistinguishable_peptide.h  ha_protXML_indistinguishable_peptide_mod_aminoacid_mass.cc  ha_protXML_indistinguishable_peptide_mod_aminoacid_mass.h  ha_protXML_indistinguishable_peptide_modification_info.cc  ha_protXML_indistinguishable_peptide_modification_info.h  ha_protXML_indistinguishable_protein.cc  ha_protXML_indistinguishable_protein.h  ha_protXML_mod_aminoacid_mass.cc  ha_protXML_mod_aminoacid_mass.h  ha_protXML_modification_info.cc  ha_protXML_modification_info.h  ha_protXML_peptide.cc  ha_protXML_peptide.h  ha_protXML_peptide_parameter.cc  ha_protXML_peptide_parameter.h  ha_protXML_peptide_parent_protein.cc  ha_protXML_peptide_parent_protein.h  ha_protXML_protein.cc  ha_protXML_protein.h  ha_protXML_protein_group.cc  ha_protXML_protein_group.h  ha_protXML_protein_parameter.cc  ha_protXML_protein_parameter.h  protXML.cc  protXML.h  test.sql
dacb/engines_for_biology/stored_procedures/: 0README  blast_best_matches.sql
dacb/engines_for_biology/template/: Makefile.in  configure  ha_core.cc  ha_template.cc  ha_template.cc.in  ha_template.h  ha_template.h.in  test.sql  transparent_file.cc.in  transparent_file.h.in
dacb/engines_for_biology/util/: transparent_file.cc  util.cc  util.h
jm/: 2014_plate_reader_paste_massager.R  README.md
(+36 files in other folders)
